GNOME Bugzilla – Bug 695324
Built-in Recorder Freezes mouse while entering overview
Last modified: 2013-03-11 17:26:50 UTC
Created attachment 238244 [details] Mouse Pointer freezes Reproduce always in GS > 3.7.x (both with nVidia and Nouveau) Pressing Ctrl+Alt+Shift+R. gstreamer will hang up recording mouse movement if we enter overview. I am attaching a screencasting. Check on the pointer. I was trying lots of pipelines, if there is a workaround please let me know as I am trying to make a video.
seems like it just needs to be ported to use XInput2.
Created attachment 238601 [details] [review] recorder: don't bother selecting for enter/leave/motion events Mutter already handles that for us.
Created attachment 238602 [details] [review] recorder: port to XInput2 Pointer tracking is broken when the pointer is over the stage input area. This is apparently fallout from mutter going to XInput2. This commit changes the mouse event handling code to also use XInput2.
The above two patches were only very briefly tested, but they should be good enough that you can get your videos done, I think.
Review of attachment 238602 [details] [review]: OK.
Review of attachment 238601 [details] [review]: OK.
Review of attachment 238602 [details] [review]: ::: src/shell-recorder.c @@ +732,3 @@ + if (leave_event->deviceid == VIRTUAL_CORE_POINTER_ID && + (xev->xcrossing.detail != NotifyVirtual && + xev->xcrossing.detail != NotifyNonlinearVirtual)) This part wasn't updated properly.
(pushed with the above mentioned fix) Attachment 238601 [details] pushed as e80795b - recorder: don't bother selecting for enter/leave/motion events Attachment 238602 [details] pushed as ddced79 - recorder: port to XInput2