recorder: don't bother selecting for enter/leave/motion events

Mutter already handles that for us.

https://bugzilla.gnome.org/show_bug.cgi?id=695324